# Chronicle-MCP

./: .chronicle_index.json  .clinerules  .continuerules  .gitignore  Dockerfile  README.md  chat_core.py  chat_server.py  cli.py  mcp_config.json  pyproject.toml  server.json  smithery.yaml  smoke_test_live.py  split_chats.py  test_all_tools.py  test_chat_connector.py  test_stale_closure.py
.well-known/mcp/: server-card.json
chronicle_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
